k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abcbank
  labels:
    app.kubernetes.io/part-of: abcbank
