k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abc-bank-service
spec:
  selector:
    app: abc-bank
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
